// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner component should render big spinner 1`] = `
<div
  className="preloader-wrapper big active valign-wrapper"
>
  <div
    className="spinner-layer spinner-blue"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-red"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-yellow"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-green"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
</div>
`;

exports[`Spinner component should render small spinner 1`] = `
<div
  className="preloader-wrapper small active valign-wrapper"
>
  <div
    className="spinner-layer spinner-blue"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-red"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-yellow"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-green"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
</div>
`;

exports[`Spinner component should render spinner 1`] = `
<div
  className="preloader-wrapper null active valign-wrapper"
>
  <div
    className="spinner-layer spinner-blue"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-red"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-yellow"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
  <div
    className="spinner-layer spinner-green"
  >
    <div
      className="circle-clipper left"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="gap-patch"
    >
      <div
        className="circle"
      />
    </div>
    <div
      className="circle-clipper right"
    >
      <div
        className="circle"
      />
    </div>
  </div>
</div>
`;
